--- a/apps/templates/_message.html
+++ b/apps/templates/_message.html
@@ -26,11 +26,10 @@
 
 {% if messages %}
     {% for message in messages %}
-        <div class="alert alert-{{ message.tags }} help-message" >
-            {{ message|safe }}
+        <div class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %} help-message" >
             <button aria-hidden="true" data-dismiss="alert" class="close" type="button" style="outline: none;">×</button>
+            {{ message|safe }}
         </div>
-
     {% endfor %}
 {% endif %}
 
