--- a/apps/transfer/templates/transfer/database_list.html
+++ b/apps/transfer/templates/transfer/database_list.html
@@ -13,7 +13,9 @@
     </div>
 {% endblock %}
 {% block table_container %}
+{% if user.is_superuser %}
 <div class="uc pull-left m-r-5"><a href="{% url "transfer:database-create" %}" class="btn btn-sm btn-primary"> {% trans "Create database" %} </a></div>
+{% endif %}
 <table class="table table-striped table-bordered table-hover " id="database_list_table" >
     <thead>
         <tr>
@@ -36,10 +38,12 @@
 <div id="actions" class="hide">
     <div class="input-group">
         <select class="form-control m-b" style="width: auto" id="slct_bulk_update">
-            <option value="delete">{% trans 'Delete selected' %}</option>
             <option value="update">{% trans 'Update selected' %}</option>
+            {% if user.is_superuser %}
+            <option value="delete">{% trans 'Delete selected' %}</option>
             <option value="deactive">{% trans 'Deactive selected' %}</option>
             <option value="active">{% trans 'Active selected' %}</option>
+            {% endif %}
         </select>
         <div class="input-group-btn pull-left" style="padding-left: 5px;">
             <button id='btn_bulk_update' style="height: 32px;"  class="btn btn-sm btn-primary">
