--- a/apps/transfer/templates/transfer/field_list.html
+++ b/apps/transfer/templates/transfer/field_list.html
@@ -3,7 +3,9 @@
 {% block table_search %}
 {% endblock %}
 {% block table_container %}
+{% if user.is_superuser %}
 <div class="uc pull-left m-r-5"><a href="{% url "transfer:field-create" pk=table_id %}" class="btn btn-sm btn-primary"> {% trans "Create field" %} </a></div>
+{% endif %}
 <table class="table table-striped table-bordered table-hover " id="table_list_table" >
     <thead>
         <tr>
@@ -24,10 +26,12 @@
 <div id="actions" class="hide">
     <div class="input-group">
         <select class="form-control m-b" style="width: auto" id="slct_bulk_update">
-            <option value="delete">{% trans 'Delete selected' %}</option>
             <option value="update">{% trans 'Update selected' %}</option>
+            {% if user.is_superuser %}
+            <option value="delete">{% trans 'Delete selected' %}</option>
             <option value="deactive">取消敏感</option>
             <option value="active">设为敏感</option>
+            {% endif %}
         </select>
         <div class="input-group-btn pull-left" style="padding-left: 5px;">
             <button id='btn_bulk_update' style="height: 32px;"  class="btn btn-sm btn-primary">
@@ -48,8 +52,9 @@ function initTable() {
         ele: $('#table_list_table'),
         columnDefs: [
             {targets: 1, createdCell: function (td, cellData, rowData) {
-                var detail_btn = '<a href="{% url 'transfer:field-update' tb_id=table_id pk=DEFAULT_PK %}">' + cellData + '</a>';
-                $(td).html(detail_btn.replace("{{ DEFAULT_PK }}", rowData.id));
+                {#var detail_btn = '<a href="{% url 'transfer:field-update' tb_id=table_id pk=DEFAULT_PK %}">' + cellData + '</a>';#}
+                {#$(td).html(detail_btn.replace("{{ DEFAULT_PK }}", rowData.id));#}
+                $(td).html(cellData)
             }},
             {targets: 2, createdCell: function (td, cellData, rowData) {
                 $(td).html(cellData)
