--- a/apps/transfer/templates/transfer/table_list.html
+++ b/apps/transfer/templates/transfer/table_list.html
@@ -3,7 +3,9 @@
 {% block table_search %}
 {% endblock %}
 {% block table_container %}
+{% if user.is_superuser %}
 <div class="uc pull-left m-r-5"><a href="{% url "transfer:table-create" pk=database_id %}" class="btn btn-sm btn-primary"> {% trans "Create table" %} </a></div>
+{% endif %}
 <table class="table table-striped table-bordered table-hover " id="table_list_table" >
     <thead>
         <tr>
@@ -30,10 +32,12 @@
 <div id="actions" class="hide">
     <div class="input-group">
         <select class="form-control m-b" style="width: auto" id="slct_bulk_update">
-            <option value="delete">{% trans 'Delete selected' %}</option>
             <option value="update">{% trans 'Update selected' %}</option>
+            {% if user.is_superuser %}
+            <option value="delete">{% trans 'Delete selected' %}</option>
             <option value="deactive">{% trans 'Deactive selected' %}</option>
             <option value="active">{% trans 'Active selected' %}</option>
+            {% endif %}
         </select>
         <div class="input-group-btn pull-left" style="padding-left: 5px;">
             <button id='btn_bulk_update' style="height: 32px;"  class="btn btn-sm btn-primary">
