--- a/apps/transfer/templates/transfer/schedule_import_create.html
+++ b/apps/transfer/templates/transfer/schedule_import_create.html
@@ -15,7 +15,7 @@
          </div>
     {% endif %}
     {% csrf_token %}
-    {% bootstrap_field form.name layout="horizontal" %}
+{#    {% bootstrap_field form.name layout="horizontal" %}#}
     {% bootstrap_field form.database layout="horizontal" %}
     {% bootstrap_field form.tables layout="horizontal" %}
     {% bootstrap_field form.crontab layout="horizontal" %}
