--- a/apps/transfer/templates/transfer/table_create.html
+++ b/apps/transfer/templates/transfer/table_create.html
@@ -23,6 +23,7 @@
     {% bootstrap_field form.partition_field layout="horizontal" %}
     {% bootstrap_field form.dev layout="horizontal" %}
     {% bootstrap_field form.opr layout="horizontal" %}
+    {% bootstrap_field form.bus layout="horizontal" %}
 
     <div class="hr-line-dashed"></div>
     <h3>{% trans 'Other' %}</h3>
