--- a/apps/transfer/templates/transfer/table_list.html
+++ b/apps/transfer/templates/transfer/table_list.html
@@ -20,6 +20,7 @@
             <th class="text-center">分区字段</th>
             <th class="text-center">对应开发</th>
             <th class="text-center">对应运维</th>
+            <th class="text-center">对应业务</th>
             <th class="text-center">是否可用</th>
             <th class="text-center">最近修改人</th>
             <th class="text-center">修改时间</th>
@@ -87,20 +88,23 @@ function initTable() {
             {targets: 8, createdCell: function (td, cellData, rowData) {
                 $(td).html(cellData)
             }},
-            {targets: 9, createdCell: function (td, cellData) {
+            {targets: 9, createdCell: function (td, cellData, rowData) {
+                $(td).html(cellData)
+            }},
+            {targets: 10, createdCell: function (td, cellData) {
                 if (!cellData) {
                     $(td).html('<i class="fa fa-times text-danger"></i>')
                 } else {
                     $(td).html('<i class="fa fa-check text-navy"></i>')
                 }
             }},
-            {targets: 10, createdCell: function (td, cellData, rowData) {
+            {targets: 11, createdCell: function (td, cellData, rowData) {
                 $(td).html(cellData)
             }},
-            {targets: 11, createdCell: function (td, cellData, rowData) {
+            {targets: 12, createdCell: function (td, cellData, rowData) {
                 $(td).html(cellData.replace(' +0800', ''))
             }},
-            {targets: 12, createdCell: function (td, cellData, rowData) {
+            {targets: 13, createdCell: function (td, cellData, rowData) {
                 $(td).html(cellData.replace(/\n/g, '<br>'))
             }}
         ],
@@ -115,6 +119,7 @@ function initTable() {
             {data: "partition_field" },
             {data: "dev" },
             {data: "opr"},
+            {data: "bus"},
             {data: "is_active", orderable: false },
             {data: "modifier"},
             {data: "modify_time"},
