--- a/apps/transfer/templates/transfer/database_update.html
+++ b/apps/transfer/templates/transfer/database_update.html
@@ -18,6 +18,7 @@
     {% bootstrap_field form.quota layout="horizontal" %}
     {% bootstrap_field form.dev layout="horizontal" %}
     {% bootstrap_field form.opr layout="horizontal" %}
+    {% bootstrap_field form.bus layout="horizontal" %}
 
     <div class="hr-line-dashed"></div>
     <h3>{% trans 'Other' %}</h3>
