库表增加外键到标签，增加展示/修改功能

--- a/apps/transfer/templates/transfer/database_create.html
+++ b/apps/transfer/templates/transfer/database_create.html
@@ -16,6 +16,7 @@
     <h3>{% trans 'Basic' %}</h3>
     {% bootstrap_field form.name layout="horizontal" %}
     {% bootstrap_field form.quota layout="horizontal" %}
+    {% bootstrap_field form.label layout="horizontal" %}
     {% bootstrap_field form.dev layout="horizontal" %}
     {% bootstrap_field form.opr layout="horizontal" %}
     {% bootstrap_field form.bus layout="horizontal" %}
