增加命令表 调整存储结构

--- a/apps/templates/_user_profile.html
+++ b/apps/templates/_user_profile.html
@@ -11,7 +11,7 @@
         <a class="navbar-brand text-muted" href="{% url 'index' %}">
             <!-- Logo icon -->
             <b>BPMS</b>
-            <span><small>大数据管理平台</small>
+            <span><small>大数据平台管理</small>
             </span>
         </a>
 
