--- a/apps/transfer/templates/transfer/schedule_export_list.html
+++ b/apps/transfer/templates/transfer/schedule_export_list.html
@@ -3,7 +3,7 @@
 {% block table_search %}
 {% endblock %}
 {% block table_container %}
-<div class="uc pull-left m-r-5"><a href="{% url "transfer:schedule-export-create" %}" class="btn btn-sm btn-primary"> {% trans "Transfer in create" %} </a></div>
+<div class="uc pull-left m-r-5"><a href="{% url "transfer:schedule-export-create" %}" class="btn btn-sm btn-primary"> {% trans "Transfer out create" %} </a></div>
 <table class="table table-striped table-bordered table-hover " id="schedule_list_table" >
     <thead>
         <tr>
@@ -64,7 +64,7 @@ function initTable() {
                     active_info = '取 消'
                 }
                 var active_disable = ' disabled';
-                if ((rowData.status === 1)||(rowData.status === 2)){
+                if ((rowData.status_info === '等待执行')||(rowData.status_info === '取消执行')){
                     active_disable = ''
                 }
                 $(td).html(
@@ -75,7 +75,7 @@ function initTable() {
                 )
             }}
         ],
-        ajax_url: '{% url "api-ops:schedule-list" %}' + '?type=2',
+        ajax_url: '{% url "api-transfer:schedule-list" %}' + '?type=1',
         columns: [
             {data: "periodic"},
             {data: "kwargs_dict" },
