--- a/apps/transfer/templates/transfer/schedule_export_update.html
+++ b/apps/transfer/templates/transfer/schedule_export_update.html
@@ -34,7 +34,7 @@
 <script src="{% static 'js/plugins/datetimepicker/bootstrap-datetimepicker.js' %}"></script>
 <script>
     $(document).ready(function () {
-        initTables('{{ database_id }}');
+        initTables('{{ schedule_id }}');
         $('.select2').select2();
     }).on('click', '.field-tag', function() {
         changeField(this);
@@ -82,19 +82,19 @@
         initTables(database_id);
     });
 
-    function initTables(database_id) {
+    function initTables(schedule_id) {
         $.ajax({
-            url: "{% url 'api-transfer:table-list' %}" + '?database=' + database_id,
+            url: "{% url 'api-transfer:command-list' %}" + '?schedule=' + schedule_id,
             method: 'GET',
             data: {},
             dataType: "json",
             success: function (data, textStatus) {
                 var options_html='';
                 for (var i in data){
-                    if ('{{ tables }}'.indexOf(data[i].id) !== -1){
-                        options_html += '<option value="'+data[i].id+'" selected>'+data[i].name+'</option>'
+                    if ('{{ tables }}'.indexOf(data[i].table.id) !== -1){
+                        options_html += '<option value="'+data[i].table.id+'" selected>'+data[i].table.name+'</option>'
                     } else {
-                        options_html += '<option value="'+data[i].id+'">'+data[i].name+'</option>'
+                        options_html += '<option value="'+data[i].table.id+'">'+data[i].table.name+'</option>'
                     }
                  }
                 $('#id_tables').html(options_html);
