Add datatable width:100%

--- a/apps/templates/_nav_user.html
+++ b/apps/templates/_nav_user.html
@@ -36,7 +36,7 @@
 
 <li id="transfer">
     <a>
-        <i class="fa fa-inbox" style="width: 14px"></i> <span class="nav-label">{% trans 'Transfer' %}</span><span class="fa arrow"></span>
+        <i class="fa fa-coffee" style="width: 14px"></i> <span class="nav-label">{% trans 'Transfer' %}</span><span class="fa arrow"></span>
     </a>
     <ul class="nav nav-second-level">
         <li id="schedule-import"><a href="{% url 'transfer:schedule-import-list' %}">{% trans 'Transfer in' %}</a></li>
