--- a/apps/transfer/templates/transfer/schedule_export_update.html
+++ b/apps/transfer/templates/transfer/schedule_export_update.html
@@ -16,7 +16,7 @@
     {% endif %}
     {% csrf_token %}
     {% bootstrap_field form.name layout="horizontal" %}
-    {% bootstrap_field form.database layout="horizontal" %}
+    {% bootstrap_field form.schedule layout="horizontal" %}
     {% bootstrap_field form.tables layout="horizontal" %}
     {% bootstrap_field form.crontab layout="horizontal" %}
     {% bootstrap_field form.comment layout="horizontal" %}
