--- a/apps/transfer/templates/transfer/schedule_import_list.html
+++ b/apps/transfer/templates/transfer/schedule_import_list.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block table_container %}
 <div class="uc pull-left m-r-5"><a href="{% url "transfer:schedule-import-create" %}" class="btn btn-sm btn-primary"> {% trans "Transfer in create" %} </a></div>
-<table class="table table-striped table-bordered table-hover " id="schedule_list_table" >
+<table class="table table-striped table-bordered table-hover " id="schedule_list_table" style="width: 100%">
     <thead>
         <tr>
             <th class="text-center">任务名 </th>
