--- a/apps/templates/_header_bar.html
+++ b/apps/templates/_header_bar.html
@@ -8,6 +8,26 @@
                     <!--<input type="text" placeholder="{% trans 'Search' %}..." class="form-control" name="search" id="top-search">-->
                 <!--</div>-->
             <!--</form>-->
+
+            <div class="inline">
+                <h2></h2>
+                <ol class="breadcrumb">
+                    <li>
+{#                        <a href="{% url 'index' %}">{% trans 'Dashboard' %}</a>#}
+                    </li>
+                    {% if app %}
+                    <li>
+                        <a>{{ app }}</a>
+                    </li>
+                    {% endif %}
+                    {% if action %}
+                    <li class="active">
+                        <strong>{{ action }}</strong>
+                    </li>
+                    {% endif %}
+                </ol>
+            </div>
+
         </div>
         <ul class="nav navbar-top-links navbar-right">
 {#            <li>#}
@@ -54,25 +74,25 @@
     </nav>
 </div>
 
-<div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-10">
-        <h2></h2>
-        <ol class="breadcrumb">
-            <li>
-                <a href="{% url 'index' %}">{% trans 'Dashboard' %}</a>
-            </li>
-            {% if app %}
-            <li>
-                <a>{{ app }}</a>
-            </li>
-            {% endif %}
-            {% if action %}
-            <li class="active">
-                <strong>{{ action }}</strong>
-            </li>
-            {% endif %}
-        </ol>
-    </div>
-    <div class="col-sm-2">
-    </div>
-</div>
+{#<div class="row wrapper border-bottom white-bg page-heading">#}
+{#    <div class="col-sm-10">#}
+{#        <h2></h2>#}
+{#        <ol class="breadcrumb">#}
+{#            <li>#}
+{#                <a href="{% url 'index' %}">{% trans 'Dashboard' %}</a>#}
+{#            </li>#}
+{#            {% if app %}#}
+{#            <li>#}
+{#                <a>{{ app }}</a>#}
+{#            </li>#}
+{#            {% endif %}#}
+{#            {% if action %}#}
+{#            <li class="active">#}
+{#                <strong>{{ action }}</strong>#}
+{#            </li>#}
+{#            {% endif %}#}
+{#        </ol>#}
+{#    </div>#}
+{#    <div class="col-sm-2">#}
+{#    </div>#}
+{#</div>#}
