--- a/apps/transfer/templates/transfer/database_list.html
+++ b/apps/transfer/templates/transfer/database_list.html
@@ -16,7 +16,7 @@
 {% if user.is_superuser %}
 <div class="uc pull-left m-r-5"><a href="{% url "transfer:database-create" %}" class="btn btn-sm btn-primary"> {% trans "Create database" %} </a></div>
 {% endif %}
-<table class="table table-striped table-bordered table-hover " id="database_list_table" >
+<table class="table table-striped table-bordered table-hover " id="database_list_table" style="width: 100%">
     <thead>
         <tr>
             <th class="text-center">
