--- a/apps/transfer/templates/transfer/field_list.html
+++ b/apps/transfer/templates/transfer/field_list.html
@@ -6,7 +6,7 @@
 {% if user.is_superuser %}
 <div class="uc pull-left m-r-5"><a href="{% url "transfer:field-create" pk=table_id %}" class="btn btn-sm btn-primary"> {% trans "Create field" %} </a></div>
 {% endif %}
-<table class="table table-striped table-bordered table-hover " id="field_list_table" >
+<table class="table table-striped table-bordered table-hover " id="field_list_table" style="width: 100%">
     <thead>
         <tr>
             <th class="text-center">
